# PR-Persona

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/analysis-service/: .env.example  pyproject.toml
apps/analysis-service/app/: main.py
apps/analysis-service/app/api/: deps.py
apps/analysis-service/app/api/routes/: analyze.py
apps/analysis-service/app/core/: config.py
apps/analysis-service/app/integrations/: github_client.py  llm.py
apps/analysis-service/app/repositories/: supabase_repo.py
apps/analysis-service/app/schemas/: analysis.py  pr.py
apps/analysis-service/app/services/: analysis_orchestrator.py  judgement_analyzer.py  persona_analyzer.py  social_health_scorer.py
apps/web/: package.json
apps/web/src/: middleware.ts
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(dashboard)/: layout.tsx  page.tsx
apps/web/src/app/(dashboard)/pull/[owner]/[repo]/[number]/: page.tsx
apps/web/src/app/api/analyze/: route.ts
apps/web/src/app/auth/callback/: route.ts
apps/web/src/lib/supabase/: middleware.ts
docs/: 01_prd.md  02_technical_design.md  03_codebase_structure.md  04_user_flows.md  05_security_guardrails.md  06_coding_standards.md  07_phases_milestones.md
supabase/: seed.sql
supabase/migrations/: 20260318000000_initial_schema.sql
